ebrains/nest-desktop-dev/service-apache2-oidc-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache2-oidc-dev
  namespace: nest-desktop
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    io.kompose.service: apache2-oidc-dev
  sessionAffinity: None
  type: ClusterIP
