ebrains/nest-desktop-dev/service-nest-desktop-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: nest-desktop-dev
  namespace: nest-desktop
spec:
  ports:
    - port: 54286
      protocol: TCP
      targetPort: 54286
  selector:
    io.kompose.service: nest-desktop-dev
  sessionAffinity: None
  type: ClusterIP
