ebrains/nest-desktop-dev/service-nest-simulator-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: nest-simulator-dev
  namespace: nest-desktop
spec:
  ports:
    - name: nest-simulator
      port: 52425
      protocol: TCP
      targetPort: 52425
    - name: nestml
      port: 52426
      protocol: TCP
      targetPort: 52426
  selector:
    io.kompose.service: nest-simulator-dev
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: ClusterIP
