ebrains/nest-desktop-dev/ingress-nest-desktop-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nest-desktop-dev
  namespace: nest-desktop
spec:
  defaultBackend:
    service:
      name: apache2-oidc-dev
      port:
        number: 8080
  ingressClassName: nginx
  rules:
    - host: nest-desktop.apps.tc.humanbrainproject.eu
      http:
        paths:
          - backend:
              service:
                name: apache2-oidc-dev
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - nest-desktop.apps.tc.humanbrainproject.eu
      secretName: tls-nest-desktop-dev
